@startuml "Sistema de Apoio Inteligente ao Estudo"

skinparam classAttributeIconSize 0
hide circle

abstract class "Usuario" as Usuario {
    - Id: Int
    - nome: String
    - email: String
    - senha: String
    + cadastrar()
    + login()
    + logout()
    + visualizarDashboard()
}

class "Professor" as Professor {
    + criarDisciplina()
    + publicarConteudo()
    + criarAtividade()
    + acompanharDesempenho()
    + cadastrarAluno()
}

class "Aluno" as Aluno {
    + estudarConteudo()
    + realizarAtividade()
    + solicitarAjuda()
}

class "InteligenciaArtificial" as IA {
    + explicarConteudo()
    + gerarExercicios()
    + sugerirMaterial()
}

class "RelatorioDesempenho" as Relatorio {
    + gerarRelatorio()
}

class "Disciplina" as Disciplina {
    - Id: Int
    - nome: String
    - descricao: String
    + adicionarConteudo()
    + adicionarAluno()
    + removerAluno()
}

class "Conteudo" as Conteudo {
    - Id: Int
    - titulo: String
    - material: String
    + exibirConteudo()
}

class "Atividade" as Atividade {
    - Id: Int
    - titulo: String
    - descricao: String
    + avaliarResposta()
}

abstract class "Questao" as Questao {
    - enunciado: String
    + corrigirResposta()
}

class "QuestaoMultiplaEscolha" as QME {
    - alternativas: List
    - respostaCorreta: String
    + corrigirResposta()
}

class "QuestaoDissertativa" as QD {
    + corrigirResposta()
}

' --- Relacionamentos Exatos da Imagem ---

' Herança (Setas vazias)
Usuario <|-- Professor
Usuario <|-- Aluno
Questao <|-- QME
Questao <|-- QD

' Associações da IA
IA -- Professor : apoia
IA -- Aluno : auxilia

' Associações de Gerenciamento e Desempenho
Professor -- Relatorio
Relatorio -- Aluno
Professor -- Disciplina : gerencia

' Composições (Diamantes pretos)
Disciplina *-- Conteudo
Disciplina *-- Atividade
Atividade *-- Questao

' Fluxo de Estudo
Aluno -- Conteudo : estuda
Aluno -- Atividade : realiza

' Nota explicativa (igual ao post-it amarelo)
note bottom of Questao
  <b>Método polimórfico:</b>
  corrigirResposta()
  Implementado de forma diferente em:
  QuestaoMultiplaEscolha, QuestaoDissertativa
end note

@enduml